--- a/src/fileselector/FileSelector.css
+++ b/src/fileselector/FileSelector.css
@@ -1,38 +1,42 @@
 .submit-btn-root {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .upload-btn {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .file-upload-header {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .file-input {
-    width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
 .file-input + label {
-    font-weight: 500;
-    display: inline-block;
-    cursor: pointer;
-    padding-top: 8px;
-    background-color: #f3ecec;
-    padding-bottom: 8px;
-    padding-right: 64px;
-    padding-left: 64px;
-    border-radius: 4px;
-    border-style: solid;
+  font-weight: 500;
+  display: inline-block;
+  cursor: pointer;
+  padding-top: 8px;
+  background-color: #f3ecec;
+  padding-bottom: 8px;
+  padding-right: 64px;
+  padding-left: 64px;
+  border-radius: 4px;
+  border-style: solid;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 
 .file-input:focus + label,
 .file-input + label:hover {
-    opacity: 70%;
+  opacity: 60%;
 }
