--- a/src/fileselector/FileSelector.css
+++ b/src/fileselector/FileSelector.css
@@ -29,7 +29,7 @@
   padding-left: 64px;
   border-radius: 4px;
   border-style: solid;
-  opacity: 0.6;
+  opacity: 1;
   transition: 0.3s;
   display: inline-block;
   color: black;
@@ -39,10 +39,10 @@
 
 .file-input:focus + label,
 .file-input + label:hover {
-  opacity: 1;
+  opacity: 0.6;
   transform: translateY(2px);
 }
 
 .error-message {
-  color: red;
+  color: #ff6961;
 }
